tests/pos/i24507/A.java
package a;

public class A {
  protected class B {}
}
