tests/neg/i11616/A.java
package pkg;

public class A {

    protected void fn1() { System.out.println("A#fn1()"); }
              void fn2() { System.out.println("A#fn2()"); }

}
